fixed dropdown menu not visible

--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -29,7 +29,7 @@
   .logo {
     cursor: pointer;
     img {
-      height: 50px;
+      height: 200px;
     }
   }
   .menuItems {
