--- a/src/index.scss
+++ b/src/index.scss
@@ -16,8 +16,8 @@
   --black-lighter: #1c4b91;
   --black-light: #173d77;
   --pink: #da2f68;
-  --orange: #f89e00;
-  --gradient: linear-gradient(98.37deg, #f89e00 0.99%, #da2f68 100%);
+  --orange: red;
+  --gradient: linear-gradient(98.37deg, red 0.99%, #da2f68 100%);
 }
 
 * {
